DG-2008-09-24-0: Enhancem.:  qrsub/qalter/qhold/qrls [-help] test of exit 
                             codes and if help output is showed in case of 
                             no option.  
                 Review:     CR

TB-2008-09-23-0: Enhancem.:  o Automatically search for check_names in TS menu
                             o Enhanced features for interrupt handler
                 Review:     CR

CR-2008-09-23-0: Cleanup:    o Testsuite created log file (*.ts.log) not in TS
                               working dir if absolut path to settings file was
                               specified.
                 Review:     TB

AF-2008-09-22-0: Enhancem.:  o Added test for issue 512.
                             o Added parameter my_env to sdmadm_command.
                             o Introduced proc hedeby_get_default_env to get a default
                               SDM env.
                             o Introduced a meta variable UNSET_VAR for the
                               user_enviroment array in proc create_shell_script.
                               With UNSET_VAR a set of variables defined in the 
                               users environment can be unset.
                 Review:     RH

TB-2008-09-22-1: Enhancem.:  o Added test for hedeby issue 542:
                               checktree_hedeby/checktree/issues/issue_542/check.62.exp
                 Review:     RH

TB-2008-09-22-0: Enhancem.:  o added new tcl_files/tcl_utils.tcl file with
                               functions list_grep and format_array
                             o added new (unlisted) menu entry "-eval" to
                               be able to execute TCL commands in the TS
                               environment
                 Review:     CR

JG-2008-09-22-1: Cleanup:    bugs/issuezilla/2372
                 Review:     CR

JG-2008-09-22-0: Bugfix:     limit the number of queue slots to 100 - this is